- Convergence assessment has been improved with a new set of
  convergence codes and new message handling.
- clm.control has gained several arguments to accommodate this.
- in clm the new function conv.check assess convergence and compute
  the variance-covariance matrix of the parameters. Thus vcov is
  always part of a clm object.
- vcov.clm has been redesigned and can now compute the
  variance-covariance matrix with Cholesky, SVD, EIGEN and QR methods
  or just grap it from the clm object (default).
- nominal_test and scale_test functions added: they add all terms in a
  model to nominal and scale formulae respectively and perform
  likelihood ratio tests. These functions can be helpful in model
  development and model/GOF testing, e.g. of non-proportional odds.
- Lazy-loading of data enabled.
- MASS moved from Depends to Imports.
- In clm man-page the 'value' list is ordered alphabetically as are
  the elements in a clm object.
- clmm now computes the variance-covariance matrix with the Cholesky
  decomposition.
- makeThresholds now take ylevels rather than y as argument.
- clm.control and clmm.control are moved to control.R
- drop.cols has gained argument drop.scale which controls whether
  columns in the scale design matrix are droped if they are linearly
  dependent of columns in the nominal design matrix. This was
  previously implicitly TRUE but is now FALSE to allow fits of certain
  models.
- The list of control arguments are now storred as part of the clm
  output.
- weights, offset and S.offset can now be missing or NULL in clm.fit.
- predict.clm now allows type="eta".

2013-08-22:
- Exporting S3 print method for convergence.clm objects.

2013-08-23:
- Fixing an issue in the Hessian computation for boundary fits with
  useMatrix=FALSE and a single scalar random-effects term.
- Allowing control parameters to be passed on to nlminb (when it is
  used). A bug was fixed in getCtrlArgs and clmm.control now includes
  method="nlminb".